2017-04-03  Devin Rousso  <webkit@devinrousso.com>

        Web Inspector: Preference for Auto Showing Scope Chain sidebar on pause
        https://bugs.webkit.org/show_bug.cgi?id=149487

        Reviewed by Timothy Hatcher.

        * Localizations/en.lproj/localizedStrings.js:

        * UserInterface/Base/Setting.js:
        * UserInterface/Views/SettingsTabContentView.js:
        (WebInspector.SettingsTabContentView.prototype.layout):
        Add WebInspector.Setting for showing Scope Chain on pause.

        * UserInterface/Base/Main.js:
        (WebInspector.showDebuggerTab):
        (WebInspector._debuggerDidPause):
        * UserInterface/Views/SourceCodeTextEditor.js:
        (WebInspector.SourceCodeTextEditor.prototype.textEditorGutterContextMenu):
        Modify parameters to use a dictionary of options instead of just a single value.  In doing
        so, add support for a value that will show the Scope Chain sidebar.

        * UserInterface/Views/SettingsTabContentView.css:
        (.content-view.settings):
        (.content-view.settings > .header):
        Drive-by: add padding to bottom of Settings tab so that additional scroll space is mirrored.

2017-04-03  Brian Burg  <bburg@apple.com>

        Web Inspector: RTL: layout issues in call frame tree elements and async call stacks
        https://bugs.webkit.org/show_bug.cgi?id=170419

        Reviewed by Matt Baker.

        * UserInterface/Views/CallFrameTreeElement.css:
        (.tree-outline .item.call-frame .status):
        (body[dir=ltr] .tree-outline .item.call-frame .status):
        (body[dir=rtl] .tree-outline .item.call-frame .status):
        Flip the current call frame indicator and make sure it sticks to the leading edge.

        (.tree-outline .item.call-frame.async-boundary):
        (body[dir=ltr] .tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary):
        (body[dir=rtl] .tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary):